[gd_scene load_steps=2 format=2]

[ext_resource path="res://physics/ui/esc_menu/esc_menu.gd" type="Script" id=1]

[node name="EscMenu" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -68.0
margin_right = 72.0
margin_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 32.0
text = "Save game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="."]
margin_left = 8.0
margin_top = 40.0
margin_right = 136.0
margin_bottom = 64.0
text = "Load game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 8.0
margin_top = 88.0
margin_right = 136.0
margin_bottom = 112.0
text = "Quit game"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
